# RegFGW

./: .gitignore  LICENSE  README.md  pyproject.toml
data/cells/: AlAs.cif  GaP.cif  KI.cif  Li3ScCl6.cif
examples/: plot_complete_graph.ipynb  score_energy_benchmark.ipynb  sub100_film100_termAs_P4-mmm_1_P_P4-mmm_1_cand0_film_bulk.cif  sub100_film100_termAs_P4-mmm_1_P_P4-mmm_1_cand1.traj
examples/score_energy_benckmark/: sub100_film100_termAs_P4-mmm_1_As_P4-mmm_1_cand0.traj  sub100_film100_termAs_P4-mmm_1_P_P4-mmm_1_cand2.traj
scripts/: calculate_mace_energy.py  energy_calculation_mace.py  main.py  score_energy_benchmark.py
src/regfgw/: __init__.py  fgw_metric.py  interface_construction.py  registry_bo.py  structure_to_graph.py
